vonMorgenMin: header: direct navigation links to blog

--- a/onYOURway.Client.WebApp/App/themes/vonMorgenMin/css/_nav.less
+++ b/onYOURway.Client.WebApp/App/themes/vonMorgenMin/css/_nav.less
@@ -27,8 +27,12 @@ header {
       }
     }
 
-    .navi a {
-      height: 24px;
+    .navi {
+      margin-left: 185px;
+
+      a {
+        height: 24px;
+      }
     }
 
     .login {
