--- a/onYOURway.Client.WebApp/App/views/vonMorgenMin/_nav.html
+++ b/onYOURway.Client.WebApp/App/views/vonMorgenMin/_nav.html
@@ -16,10 +16,10 @@
             </div>
             <div class="navi">
                 <a href="#map" class="hidden-s">KARTE</a>
-                <a href="#blog">BLOG</a>
-                <a href="#workshops">WORKSHOPS</a>
-                <a href="#join" class="hidden-s">MITMACHEN</a>
-                <a href="#info">INFO</a>
+                <a href="http://blog.kartevonmorgen.org/">BLOG</a>
+                <a href="http://blog.kartevonmorgen.org/?page_id=16">WORKSHOPS</a>
+                <a href="http://blog.kartevonmorgen.org/?page_id=18" class="hidden-s">MITMACHEN</a>
+                <a href="http://blog.kartevonmorgen.org/?page_id=20">INFO</a>
             </div>
         </div>
     </div>
