vonMorgenMin: updating visual studio project properties and adding some forgotten missing files to git

--- a/onYOURway.Client.WebApp/App/themes/vonMorgenMin/css/vonMorgen.css
+++ b/onYOURway.Client.WebApp/App/themes/vonMorgenMin/css/vonMorgen.css
@@ -1,4 +1,4 @@
-@import url('../../vonMorgen/fonts/source-sans-pro.css');
+﻿@import url('../../vonMorgen/fonts/source-sans-pro.css');
 body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -92,9 +92,6 @@ ol {
 }
 #map.listOpen {
   top: 70px !important;
-}
-@media (max-height: 639px) {
-  
 }
 @media (max-height: 639px) and (min-height: 480px) {
   #map.listOpen {
@@ -992,9 +989,6 @@ div#placesList ul {
   -webkit-column-rule: 1px solid transparent;
   padding: 6px 12px 0 12px;
 }
-@media (max-height: 639px) {
-  
-}
 @media (max-height: 639px) and (min-height: 480px) {
   div#placesList ul {
     height: 120px !important;
@@ -1091,9 +1085,6 @@ div#placesList ul li.selected {
   min-width: 74px;
   padding: 8px;
 }
-@media (min-width: 480px) {
-  
-}
 @media (min-width: 480px) and (max-width: 599px) {
   #placePreview .picture {
     position: absolute;
@@ -1183,9 +1174,6 @@ div#placesList ul li.selected {
   min-width: 20%;
   padding: 0 8px 8px 8px;
 }
-@media (min-width: 480px) {
-  
-}
 @media (min-width: 480px) and (max-width: 599px) {
   #placePreview .contactInfo {
     margin-top: 22%;
@@ -1215,9 +1203,9 @@ div#placesList ul li.selected {
 #placePreview .contactInfo div.actions a.btn i {
   line-height: 32px;
   /*border-bottom: 2px solid transparent;*/
-
   height: 32px;
   vertical-align: bottom;
   font-size: 18px;
   border-bottom-color: #000000 !important;
 }
+/*# sourceMappingURL=vonMorgen.css.map */
