--- a/onYOURway.Client.WebApp/App/views/vonMorgenMin/home.html
+++ b/onYOURway.Client.WebApp/App/views/vonMorgenMin/home.html
@@ -2,7 +2,7 @@
     <div class="aboveMap" data-bind="click: openMap">
         <div class="searchPopup" data-bind="click: function(){}, clickBubble: false">
             <div class="popupHeader">
-                <a href="#map" class="close"><i class="fa fa-fwd fa-close"></i></a>
+                <a href="#map" class="close" data-bind="click: openMap"><i class="fa fa-fwd fa-close"></i></a>
                 <h2>Alles Gute auf einer Karte</h2>
             </div>
             <div data-bind="component: 'searchBox'"><!-- searchBox --></div>
