wip: streamline API routing schema and add realm detection

--- a/onYOURway.Client.WebApp/App/views/my/siteCollector.html
+++ b/onYOURway.Client.WebApp/App/views/my/siteCollector.html
@@ -31,7 +31,7 @@
         <div class="row">
             <div class="col-sm-6">
 
-                <div class="form-group">
+                <!--<div class="form-group">
 					<label data-bind="localText: 'siteCollector.selectRegion'">Selected region/map</label>:
 
                     <select data-bind="value: region" id="accessibility" class="form-control">
@@ -40,11 +40,7 @@
                         <option value="3">Transformap</option>
                     </select>
 
-                    <!--<input type="text" class="form-control" placeholder="region" style="width: 200px; min-height: 34px;"
-                           id="searchFor" name="searchFor" autocomplete="off" spellcheck="false" autofocus="autofocus"
-                           data-bind="value: region, select2: {multiple: false, minimumInputLength: 0, query: getRegions }">-->
-
-                </div>
+                </div>-->
 
                 <div class="form-group">
                     <label for="addSiteName" class="translate">Name:</label>
