--- a/onYOURway.Client.WebApp/App/themes/vonMorgen/css/vonMorgen.less
+++ b/onYOURway.Client.WebApp/App/themes/vonMorgen/css/vonMorgen.less
@@ -67,6 +67,6 @@ body, header, div, span, ul, ol {
 @import url('home.less');
 @import url('components/searchBox.less');
 @import url('components/tagSelection.less');
-@import url('my/siteCollector.less');
+@import url('siteCollector.less');
 @import url('searchResults/placesList.less');
 @import url('searchResults/placePreview.less');
